--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -27,6 +27,15 @@ $background-opacity: 0.9;
   }
 }
 
+//Set Text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
+
 //Media query mixins(display on different screen sizes).
 @mixin mediaSm {
   @media screen and (max-width: 500px) {
