--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,11 +1,11 @@
 $primary-color: #444;
-$secondary-color: #eece1a;
+$secondary-color: #008000;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
 
 @mixin easeInOut {
-  transition: all 1s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 @mixin background {
