--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -4,14 +4,14 @@
   right: 35px;
   top: 35px;
   cursor: pointer;
-  @include easeInOut();
+  @include easeInOut;
 
   .btn-line {
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
     background: set-text-color($primary-color);
-    @include easeInOut();
+    @include easeInOut;
   }
 
   &.close {
@@ -90,7 +90,6 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/portrait.jpg");
       border-radius: 50%;
       border: 3px solid $secondary-color;
     }
