--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,7 +46,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url("../img/portrait_small.jpg");
+      background: url("../img/portrait.jpg");
       height: 150px;
       width: 150px;
     }
